--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
   	</head>
   	<body>
       <!-- INSTAGRAM -->
-      <a href="127.0.0.1:5000/"
+      <a href="127.0.0.1:5000/">
         <img src = "https://cdn1.iconfinder.com/data/icons/simple-icons/4096/instagram-4096-black.png" />
       </a>
       <p>Login through instagram to start uploading your shots!</p>
